<resources>
    <string name="app_name">My calculator</string>
    <string name="button_text_7" translatable="false">7</string>
    <string name="button_text_8" translatable="false">8</string>
    <string name="button_text_9" translatable="false">9</string>
    <string name="button_text_4" translatable="false">4</string>
    <string name="button_text_5" translatable="false">5</string>
    <string name="button_text_6" translatable="false">6</string>
    <string name="button_text_1" translatable="false">1</string>
    <string name="button_text_2" translatable="false">2</string>
    <string name="button_text_3" translatable="false">3</string>
    <string name="button_text_dot" translatable="false">.</string>
    <string name="button_text_0" translatable="false">0</string>
    <string name="button_text_equal" translatable="false">=</string>
    <string name="button_text_plus" translatable="false">+</string>
    <string name="button_text_minus" translatable="false">-</string>
    <string name="button_text_multiply" translatable="false">*</string>
    <string name="button_text_devide" translatable="false">÷</string>
    <string name="button_text_del" translatable="false">DEL</string>
    <string name="button_text_AC" translatable="false">AC</string>
    <string name="settings_headline">Settings</string>
    <string name="choosing_day_or_night_theme">Choose day or night theme:</string>
    <string name="toggle_day_mode" translatable="false">Day mode</string>
    <string name="toggle_night_mode" translatable="false">Night mode</string>
    <string name="text_back_button">Back</string>
</resources>