<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/calc">

    </androidx.appcompat.widget.AppCompatImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <TextView
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/background_text_input"
            android:gravity="end"
            android:padding="@dimen/input_text_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/button_style"
                android:text="@string/button_text_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/button_style"
                android:text="@string/button_text_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/button_style"
                android:text="@string/button_text_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/button_style"
                android:text="@string/button_text_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/button_style"
                android:text="@string/button_text_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/button_style"
                android:text="@string/button_text_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/button_style"
                android:text="@string/button_text_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/button_style"
                android:text="@string/button_text_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/button_style"
                android:text="@string/button_text_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/button_style"
                android:text="@string/button_text_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/button_style"
                android:text="@string/button_text_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/button_style"
                android:text="@string/button_text_multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/button_style"
                android:text="@string/button_text_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/button_style"
                android:text="@string/button_text_dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_AC"
                style="@style/button_style"
                android:text="@string/button_text_AC" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/button_style"
                android:text="@string/button_text_devide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/button_equal_style"
                android:text="@string/button_text_equal" />

            <ToggleButton
                android:id="@+id/day_night_button"
                android:layout_width="@dimen/toggle_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/toggle_button_margin_end"
                android:background="@drawable/background_toggle_button"
                android:text="ToggleButton"
                android:textColor="@color/toggle_button_text_color"
                android:textOff="Day mode"
                android:textOn="Night mode"
                android:textSize="@dimen/toggle_button_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="@dimen/width"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>